--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .streamlit/secrets.toml
 
+chroma_db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -162,3 +164,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
